2013-06-26  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.redhat.spec,
	  pandora_server.spec: Fixed directory permissions.

2013-06-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Merged from 4.0 branch. Fixed a call
	  to get_agent_from_addr that prevented parents from being properly
	  detected.

2013-06-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Config.pm,
	lib/PandoraFMS/Core.pm,
	conf/pandora_server.conf.new,
	FreeBSD/pandora_server.conf: added eMail option that make
	alerts shared by all destinations (delivering in separate
	mail is default as in the prior versions).

2013-06-19 Miguel de Dios <miguel.dedios@artica.es>

	* util/pandora_xml_stress.pl: fixed the send across tentacle, now
	when it can not send the file almost the log have a error entry.
	And added local send method.
	
	* util/pandora_xml_stress.conf: added confs for local send method.

2013-06-14  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed comments addition in the
	events with the internal action Create Pandora FMS event

2013-06-13  SAncho Lerena <alerena@artica.es>

        * pandora_server.redhat.spec: Fixed some path permissions.

2013-06-12  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Message logging abstraction layer and several
	  improvements.

	* lib/PandoraFMS/DB.pm: Removed debugging code.

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* util/pandora_xml_stress.pl: cleaned source code style.
	
	* pandora_server.redhat.spec: added the directories of collections
	and remote configuration into the list of chmod perms.
	
	Fixes: #2290
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-07  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Fixed a bug that created
	  pandora_server.conf.new even if pandora_server.conf did not exists.
	  Remove PERL libs when uninstalling.

2013-06-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Return undef from get_agent_from_name if the